packages/yew-attrs-macro/tests/attrs_macro/invalid-bool-fail.stderr
error[E0308]: mismatched types
 --> tests/attrs_macro/invalid-bool-fail.rs:4:23
  |
4 |     attrs! { required="test" };
  |                       ^^^^^^
  |                       |
  |                       expected `bool`, found `&str`
  |                       arguments to this function are incorrect
  |
note: function defined here
 --> $CARGO/yew-0.21.0/src/utils/mod.rs
  |
  | pub fn __ensure_type<T>(_: T) {}
  |        ^^^^^^^^^^^^^
