packages/yew-attrs-macro/tests/attrs_macro/invalid-bool-fail.rs
use yew_attrs::attrs;

fn compile_fail() {
    attrs! { required="test" };
}

fn main() {}
